# agentic_rag_for_docs

./: .env.example  .gitignore  CLAUDE.md  GEMINI.md  LICENSE  README.md  pyproject.toml
src/: main.py
src/agents/: crew.py
src/config/: config.py
src/document_processing/: chunking.py  pdf_processor.py  processor.py  tabular.py
src/retrieval/: hybrid.py  keyword.py  reranker.py  semantic.py
src/ui/: streamlit_app.py
src/utils/: embeddings_helper.py  helpers.py
src/vector_store/: chroma_store.py
